# text_chunker

./: ChatGPT-文本分块策略分析.md  Doc.md  requirements.txt  setup.cfg
configs/: default.yaml  llm_based.yaml  semantic.yaml
textchunker/: README.md  __init__.py  cli.py  config.py  export.py  factory.py  readers.py  registry.py  types.py  utils.py  visualization.py
textchunker/chunkers/: __init__.py  base.py  fixed.py  llm_based.py  recursive.py  semantic.py  structure.py
textchunker/providers/: __init__.py  llm.py
