[metadata]
name = textchunker
version = 0.1.0
description = Pluggable text chunking factory project with YAML/CLI/LLM support
author = Your Name
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://example.com/text-chunker
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Text Processing :: General

[options]
packages = find:
python_requires = >=3.9
install_requires =
    pyyaml
    loguru
    rich

[options.extras_require]
semantic =
    sentence-transformers
    numpy
token =
    tiktoken
structure =
    beautifulsoup4
    pypdf
    markdown-it-py
llm =
    openai
    transformers
    torch

[flake8]
max-line-length = 100
extend-ignore = E203,W503
